--- a/2025/pyproject.toml
+++ b/2025/pyproject.toml
@@ -5,6 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
+    "matplotlib>=3.10.7",
+    "networkx>=3.6.1",
     "numpy>=2.3.5",
     "tqdm>=4.67.1",
 ]
