--- a/2025/pyproject.toml
+++ b/2025/pyproject.toml
@@ -8,5 +8,6 @@ dependencies = [
     "matplotlib>=3.10.7",
     "networkx>=3.6.1",
     "numpy>=2.3.5",
+    "scipy>=1.16.3",
     "tqdm>=4.67.1",
 ]
